<resources>

    <string name="app_name">Cool Receipts</string>

    <string name="title_section1">Dashboard</string>
    <string name="title_section2">Approval</string>
    <string name="title_section3">Approved Transactions</string>
    <string name="title_section4">Issued OR</string>
    <string name="title_section5">Log Out</string>




    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>


    <string name="select_all">Select All</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>

    <string name="batchno">Batch No : </string>
    <string name="prnumber">PR Number :  </string>
    <string name="firstname">Firstname :</string>
    <string name="middlename">middlename</string>
    <string name="lastname">Lastname : </string>
    <string name="hospitalno">Hospital no: </string>
    <string name="hospital">Hospital : </string>
    <string name="start">Start Date : </string>
    <string name="end">End Date : </string>
    <string name="dateuploaded">Date Uploaded : </string>
    <string name="timeuploaded">Time Uploaded : </string>
    <string name="amount">Amount : </string>
    <string name="status">Status : </string>
    <string name="patients">Patients : </string>
    <string name="bankappno">Bank App No : </string>
    <string name="depositconfno">Deposit Conf No : </string>
    <string name="viewpr">VIEW PR </string>
    <string name="viewor">VIEW OR </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_cool_log_in">CoolLogIn</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cool_login_receipts">Cool Receipts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_respawn_page">RespawnPage</string>
    <string name="title_activity_sign__up__page">Sign_Up_Page</string>
</resources>
